<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ScoresFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facil"
                android:id="@+id/btnEasy"
                android:layout_weight="50"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dificil"
                android:id="@+id/btnHard"
                android:layout_weight="50"
                android:textColor="@color/white"/>
        </LinearLayout>
        <TableRow
            android:id="@+id/table_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textViewNameHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/nombre"
                android:textColor="@color/white"
                android:background="@drawable/cell_shape_header"/>

            <TextView
                android:id="@+id/textViewTimeHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/tiempoStr"
                android:textColor="@color/white"
                android:background="@drawable/cell_shape_header"/>

            <TextView
                android:id="@+id/textViewScoreHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/puntuacion"
                android:textColor="@color/white"
                android:background="@drawable/cell_shape_header"/>
        </TableRow>
        <TableLayout
            android:id="@+id/tabla_cuerpo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerScores"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </TableLayout>


    </LinearLayout>

</FrameLayout>